fix: Agrego comentario actividad 2

--- a/taller_practico.ipynb
+++ b/taller_practico.ipynb
@@ -1517,6 +1517,17 @@
     "print(\"Promedios por Programa:\")\n",
     "agrupado"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a9edf02a",
+   "metadata": {},
+   "source": [
+    "### Comentario actividad 2\n",
+    "En la segunda actividad, se manejaron estructuras fundamentales de pandas, comenzando por las Series, lo cual permitió comprender cómo se organizan los datos unidimensionales con etiquetas. Posteriormente, al trabajar con DataFrames, se llevó a la práctica la creación, visualización e inspección de tablas de datos, aplicando funciones útiles como **.info()**, **.describe()** y **.groupby()**.  \n",
+    "\n",
+    "El ejercicio de filtrado y selección con **.loc[]** e **.iloc[]** contribuyó a entender cómo acceder de manera eficiente a subconjuntos de información. Asimismo, la creación de nuevas columnas y los cálculos agregados demostraron la capacidad de pandas para realizar análisis exploratorios básicos de forma rápida y efectiva."
+   ]
   }
  ],
  "metadata": {
