fix: Cambios de configuración de librerías

--- a/sintaxis_basica.ipynb
+++ b/sintaxis_basica.ipynb
@@ -26,15 +26,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "e1d8420e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n",
+      "2.2\n",
+      "Mensaje\n",
+      "True\n"
+     ]
+    }
+   ],
    "source": [
     "var1 = 5\n",
     "var2 = 2.2\n",
     "var3 = \"Mensaje\"\n",
-    "var4 = True"
+    "var4 = True\n",
+    "print(var1)\n",
+    "print(var2) \n",
+    "print(var3)\n",
+    "print(var4)\n"
    ]
   },
   {
@@ -47,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "48a495a2",
    "metadata": {},
    "outputs": [
@@ -79,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "id": "81496706",
    "metadata": {},
    "outputs": [
@@ -112,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "id": "114791a3",
    "metadata": {},
    "outputs": [
@@ -139,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "id": "42de76d4",
    "metadata": {},
    "outputs": [
@@ -166,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "id": "e8c9db72",
    "metadata": {},
    "outputs": [
@@ -192,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "d9311ea4",
    "metadata": {},
    "outputs": [
@@ -222,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 9,
    "id": "b0b6e496",
    "metadata": {},
    "outputs": [
@@ -254,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 10,
    "id": "e3d293d1",
    "metadata": {},
    "outputs": [
@@ -289,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 11,
    "id": "a6289f26",
    "metadata": {},
    "outputs": [
@@ -329,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "id": "17bb514e",
    "metadata": {},
    "outputs": [],
@@ -347,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "id": "fbd76357",
    "metadata": {},
    "outputs": [],
@@ -362,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "dbb281b7",
    "metadata": {},
    "outputs": [
@@ -371,7 +386,7 @@
      "output_type": "stream",
      "text": [
       "Vector generado:\n",
-      "32 21 73 51 34 79 16 73 \n"
+      "66 27 94 1 29 \n"
      ]
     }
    ],
@@ -392,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "id": "ca90af07",
    "metadata": {},
    "outputs": [],
@@ -410,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "id": "8ade63dd",
    "metadata": {},
    "outputs": [],
@@ -426,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 17,
    "id": "23d3b7b8",
    "metadata": {},
    "outputs": [
@@ -435,11 +450,12 @@
      "output_type": "stream",
      "text": [
       "Matriz generada:\n",
-      "7 2 49 19 99 \n",
-      "39 25 49 99 39 \n",
-      "42 25 81 51 53 \n",
-      "86 100 76 83 16 \n",
-      "17 24 35 96 90 \n"
+      "92 53 2 52 31 72 47 91 85 \n",
+      "38 81 92 85 58 16 58 38 24 \n",
+      "69 26 30 79 44 88 31 71 63 \n",
+      "33 2 14 33 59 42 97 62 10 \n",
+      "80 41 92 61 100 57 46 45 58 \n",
+      "83 55 74 85 49 25 93 88 70 \n"
      ]
     }
    ],
