--- a/actividad_individual_graficos.ipynb
+++ b/actividad_individual_graficos.ipynb
@@ -20,12 +20,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "id": "28ef04a1",
    "metadata": {},
    "outputs": [],
    "source": [
     "#Importo librerías\n",
+    "#!pip install pandas \n",
+    "#!pip install seaborn \n",
+    "#!pip install matplotlib \n",
+    "#!pip install numpy\n",
     "import pandas as pd\n",
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
@@ -34,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "id": "87123a53",
    "metadata": {},
    "outputs": [],
@@ -45,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "id": "ccafc524",
    "metadata": {},
    "outputs": [
@@ -110,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "id": "ad926ba7",
    "metadata": {},
    "outputs": [
@@ -167,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "id": "6aaa5da6",
    "metadata": {},
    "outputs": [
@@ -211,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "id": "96cfe584",
    "metadata": {},
    "outputs": [
@@ -219,7 +223,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\denny\\AppData\\Local\\Temp\\ipykernel_27284\\2120410937.py:3: FutureWarning: \n",
+      "C:\\Users\\denny\\AppData\\Local\\Temp\\ipykernel_9224\\2120410937.py:3: FutureWarning: \n",
       "\n",
       "Passing `palette` without assigning `hue` is deprecated and will be removed in v0.14.0. Assign the `x` variable to `hue` and set `legend=False` for the same effect.\n",
       "\n",
@@ -266,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 8,
    "id": "bc11707e",
    "metadata": {},
    "outputs": [
@@ -310,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 9,
    "id": "f5ba2a9b",
    "metadata": {},
    "outputs": [
@@ -318,7 +322,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\denny\\AppData\\Local\\Temp\\ipykernel_27284\\1924215104.py:3: FutureWarning: \n",
+      "C:\\Users\\denny\\AppData\\Local\\Temp\\ipykernel_9224\\1924215104.py:3: FutureWarning: \n",
       "\n",
       "Passing `palette` without assigning `hue` is deprecated and will be removed in v0.14.0. Assign the `x` variable to `hue` and set `legend=False` for the same effect.\n",
       "\n",
@@ -357,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 10,
    "id": "2961fdad",
    "metadata": {},
    "outputs": [
@@ -402,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 11,
    "id": "7ade62cf",
    "metadata": {},
    "outputs": [
@@ -435,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 12,
    "id": "bad64916",
    "metadata": {},
    "outputs": [
@@ -476,7 +480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 13,
    "id": "cb115f15",
    "metadata": {},
    "outputs": [
